2003/07/02 16:12 rwmcfa1

	* maps: removed all of the deprecated widgets, they had no xs files
	so they wouldn't be useful anyway.

	* t/00.Gnome2.t: initial import, just uses the module for now, i.e. 
	makes sure that we don't have undefined symbols and the like

2003/06/20 11:34 muppetman

	* README, Gnome2.pm, Makefile.PL: bump version info and prepare for 
	0.24 release.  yeah, i know this skips 0.22, but it works with other
	0.24 versions.  no one has claimed ownership of Gnome2 and it will
	probably continue to stagnate like this until they do.

2003/06/05 23:11 muppetman

	* maps: removed GnomeCanvas stuff, so that it can go into its own
	module.

2003/05/22 12:00 muppetman

	* AUTHORS, LICENSE, most files: added copyright and license
	information.

2003/05/18 14:00 muppetman

	* ChangeLog: since breaking the monolithic build into pieces, 
	ChangeLog entries for Gnome2 will be in here.  i've included the 
	contents of the toplevel log up to this point for history.

	* MANIFEST: updated for proper make dist

	* Gnome2.pm: bumped up the version number, fixed the synopsis, and
	added an advert for a new author.

	* Makefile.PL: require Gtk2 >= 0.20

	* README, MANIFEST: added

2003/05/17 09:06 rwmcfa1

	* Glade/*: first pass at GladeXML added

	* Makefile: added, see comments within

	* Makefile.PL: is no more

	* lots and lots of files: G -> Glib and other related/required changes

2003/05/16 14:55 muppetman

	* Gtk2/xs/GtkSpinButton.xs: removed get_value_as_float because it is
	deprecated (and had the wrong return type anyway).

2003/05/15 11:45 muppetman

	* G/GSignal.xs: hush unused parameter warning, more efficient 
	this way, anyway

	* Gtk2/xs/GtkContainer.xs: implemented foreach

	* Gtk2/xs/GtkIconFactory.xs: minor bugfix

	* G/GType.xs, G/GValue.xs, G/gperl.h, G/typemap,
	Gnome2/xs/GnomeProgram.xs, Gtk2/xs/GtkCombo.xs, Gtk2/xs/GtkDialog.xs,
	Gtk2/xs/GtkFrame.xs, Gtk2/xs/GtkItemFactory.xs, Gtk2/xs/GtkStock.xs,