@@ -4,6 +4,7 @@ Gnome2.pm
 LICENSE
 MANIFEST
 MANIFEST.SKIP
+META.yml                                Module meta-data in YAML
 Makefile.PL
 README
 TODO
